arrow_convert/tests/ui/struct_metadata_value_not_string.rs
use arrow_convert::ArrowField;

#[derive(ArrowField)]
struct MetadataNotString {
    #[arrow_field(metadata(role = 1))]
    value: i64,
}

fn main() {}
